--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IntentApp2</string>
+    <string name="openCalc">Открыть Калькулятор</string>
 </resources>
